# silent-conjurer

./: .gitignore  Cargo.toml  README.md  Shuttle.toml
src/: commands.rs  config.rs  errors.rs  events.rs  main.rs  utils.rs
src/commands/: jobs.rs  moderation.rs  registrations.rs  scheduling.rs
src/events/: members.rs  reactions.rs
src/utils/: autocompletes.rs  checks.rs  permissions.rs
