[package]
name = "silent-conjurer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.68"
poise = "0.6.1"
futures = "0.3.30"
shuttle-runtime = "0.47.0"
shuttle-serenity = "0.47.0"
tracing = "0.1.37"
tokio = "1.26.0"
async-stream = "0.3.5"
toml = "0.7.3"
serde = { version = "1.0.208", features = ["derive"] }
